JON --concluye back, se inicia ajustes a front
